# landscaper

./: Cargo.toml  README.md
src/: argocd.rs  backstage.rs  cli.rs  commands.rs  github.rs  main.rs
src/commands/: add_badges_to_readme.rs  create_catalog_entries.rs  enrich_catalog_entries.rs  find_and_replace.rs
